--- a/TICTOCTOE/views/layout.ejs
+++ b/TICTOCTOE/views/layout.ejs
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1 class="logo">Game Hub</h1>
+                <h1 class="logo">We1 Hangout</h1>
                 <ul class="nav-links">
                     <li><a href="/">Home</a></li>
                     <li><a href="#" id="create-room-btn">Create Room</a></li>
@@ -23,10 +23,6 @@
     <main>
         <%- body %>
     </main>
-    
-    <footer>
-        <p>&copy; 2025 Game Hub. Ready for more games!</p>
-    </footer>
     
     <script src="/js/common.js"></script>
     <%- typeof additionalScripts !== 'undefined' ? additionalScripts : '' %>
