--- a/TICTOCTOE/views/partials/header.ejs
+++ b/TICTOCTOE/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1 class="logo"><a href="/">Game Hub</a></h1>
+                <h1 class="logo"><a href="/">We1 Hangout</a></h1>
                 <ul class="nav-links">
                     <li><a href="/">Home</a></li>
                     <li><a href="#" onclick="createQuickRoom()">Quick Game</a></li>
