--- a/TICTOCTOE/views/layout.ejs
+++ b/TICTOCTOE/views/layout.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style2.css">
 </head>
 <body>
     <header>
