--- a/TICTOCTOE/views/partials/header.ejs
+++ b/TICTOCTOE/views/partials/header.ejs
@@ -6,18 +6,26 @@
     <title><%= title %></title>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style2.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="nav-container">
-                <h1 class="logo"><a href="/">We1 Hangout</a></h1>
+                <h1 class="logo"><a href="/">Game Hub</a></h1>
                 <ul class="nav-links">
                     <li><a href="/">Home</a></li>
                     <li><a href="#" onclick="createQuickRoom()">Quick Game</a></li>
+                    <% if (typeof gameType !== 'undefined') { %>
+                        <li><span class="current-game">Playing: <%= gameType.toUpperCase() %></span></li>
+                    <% } %>
+                    <!-- User section will be added here by UserSessionManager -->
                 </ul>
             </div>
         </nav>
     </header>
     
     <main>
+    
+    <!-- Load user session manager first -->
+    <script src="/js/user-session.js"></script>
