--- a/TICTOCTOE/views/partials/chat.ejs
+++ b/TICTOCTOE/views/partials/chat.ejs
@@ -8,6 +8,9 @@
         <!-- Messages will be added dynamically -->
     </div>
     
+    <div id="typing-indicator" class="typing-indicator" style="display: none;">
+        Someone is typing...
+    </div>
     <div class="chat-input-container">
         <input type="text" id="chat-input" placeholder="Type your message..." maxlength="200">
         <button id="send-message" class="btn-send">Send</button>
