--- a/TICTOCTOE/views/partials/header.ejs
+++ b/TICTOCTOE/views/partials/header.ejs
@@ -14,6 +14,10 @@
             <div class="nav-container">
                 <h1 class="logo"><a href="/">Game Hub</a></h1>
                 <ul class="nav-links">
+                <div class="sound-controls">
+                    <button id="sound-toggle" class="sound-btn">🔊</button>
+                    <input type="range" id="volume-slider" min="0" max="100" value="30" class="volume-slider">
+                </div>
                     <li><a href="/">Home</a></li>
                     <li><a href="#" onclick="createQuickRoom()">Quick Game</a></li>
                     <% if (typeof gameType !== 'undefined') { %>
