--- a/TICTOCTOE/views/game.ejs
+++ b/TICTOCTOE/views/game.ejs
@@ -4,6 +4,8 @@
     
     <%- include('games/gameheader') %>
 
+    <div id="room-activity" class="room-activity"></div>
+
     
     <div class="game-layout">
 
