--- a/TICTOCTOE/views/partials/header.ejs
+++ b/TICTOCTOE/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1 class="logo"><a href="/">Game Hub</a></h1>
+                <h1 class="logo"><a href="/">We1 Hangout</a></h1>
                 <ul class="nav-links">
                 <div class="sound-controls">
                     <button id="sound-toggle" class="sound-btn">🔊</button>
