--- a/We1_Hangouts/views/partials/header.ejs
+++ b/We1_Hangouts/views/partials/header.ejs
@@ -7,7 +7,9 @@
     <script src="/socket.io/socket.io.js"></script>
     
     <link rel="stylesheet" href="/css/style.css">
-  
+    <script src="/js/base-game.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/chat.js"></script>
 </head>
 <body>
     <header>
