--- a/We1_Hangouts/views/game.ejs
+++ b/We1_Hangouts/views/game.ejs
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </div>
-                <% } else { %>
+                <% } else if (gameType === 'tic-tac-toe') { %>
                     <!-- Tic-Tac-Toe Player Cards -->
                     <div class="player-card" id="player-x">
                         <div class="player-header">
@@ -160,8 +160,12 @@
             <!-- Game Board - Conditional based on game type -->
             <% if (gameType === 'connect4') { %>
                 <%- include('games/connect4/connect4-game-board') %>
-            <% } else { %>
+            <% } else if (gameType === 'tic-tac-toe') { %>
                 <%- include('games/tic-tac-toe/tic-tac-toe-game-board') %>
+            <% } else if (gameType === 'bingo') { %>
+                <%- include('games/bingo/bingo-game-board') %>
+            <% } else if (gameType === 'dotslines') { %>
+                <%- include('games/dotslines/dotslines-game-board') %>
             <% } %>
             
             <div class="game-controls">
@@ -195,6 +199,12 @@
 <% if (gameType === 'connect4') { %>
     <script src="/js/connect4-game.js"></script>
     <link rel="stylesheet" href="/css/game_connect4.css">
-<% } else { %>
+<% } else if (gameType === 'tic-tac-toe') { %>
     <script src="/js/tictactoe-game.js"></script>
-<% } %></link>
+<% } else if (gameType === 'bingo') { %>
+    <script src="/js/bingo-game.js"></script>
+    <link rel="stylesheet" href="/css/game_bingo.css">
+<% } else if (gameType === 'dotslines') { %>
+    <script src="/js/dotslines-game.js"></script>
+    <link rel="stylesheet" href="/css/game_dotslines.css">
+<% } %>
